--- a/src/www/index.html
+++ b/src/www/index.html
@@ -2,18 +2,25 @@
     <head>
         <script src="scripts/system.js"></script>
         <script>
-            System.baseURL = 'scripts';
+            System.baseURL = 'scripts/modules';
             System.paths['jquery'] = '//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js';
-            System.import('jquery')
-            System.import('alertmodule.js')
+            System.import('jquery');
+            System.import('alertmodule.js').then(function(exa){
+                window.exa = exa;
+            });
         </script>
     </head>
     <body>
         <h1>JS Module Demo</h1>
         <p>Just messing around with js modules and loaders</p>
-        <input type="button" onclick="changehtml()" value="Change HTML!" />
-        <div id="html_block">
-            I am a block of HTML, click the button above to change me!
+        <div>
+            <input type="button" onclick="htm.setHtml('html_block', 'CHANGED!')" value="Change HTML!" />
+            <div id="html_block">
+                I am a block of HTML, click the button above to change me!
+            </div>
+        </div>
+        <div>
+            <input type="button" onclick="exa.exAlert('HEY THERE')" value="Show EAlert" />
         </div>
     </body>
 </html>
