setting up html modules

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -8,6 +8,9 @@
             System.import('alertmodule.js').then(function(exa){
                 window.exa = exa;
             });
+            System.import('htmlmodule.js').then(function(htm){
+               window.htm = htm;
+            });
         </script>
     </head>
     <body>
