--- a/src/www/index.html
+++ b/src/www/index.html
@@ -6,10 +6,10 @@
             System.paths['jquery'] = '//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js';
             System.defaultJSExtensions = true;
             System.import('jquery');
-            System.import('alertmodule').then(function(exa){
+            System.import('exalert').then(function(exa){
                 window.exa = exa;
             });
-            System.import('htmlmodule').then(function(htm){
+            System.import('exhtml').then(function(htm){
                window.htm = htm;
             });
         </script>
