--- a/src/www/system.html
+++ b/src/www/system.html
@@ -1,29 +1,38 @@
-<html>
-<head>
-    <script src="scripts/system.js"></script>
-    <script>
-        System.baseURL = 'scripts/modules';
-        System.paths['jquery'] = '//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js';
-        System.defaultJSExtensions = true;
-        System.import('jquery');
-        System.import('exalert').then(function(exa){
-            window.exa = exa;
-        });
-        System.import('exhtml').then(function(htm){
-            window.htm = htm;
-        });
-    </script>
-</head>
-<body>
-<h1>SystemJS Module Page</h1>
-<div>
-    <input type="button" onclick="htm.setHtml('html_block', 'CHANGED!')" value="Change HTML!" />
-    <div id="html_block">
-        I am a block of HTML, click the button above to change me!
-    </div>
-</div>
-<div>
-    <input type="button" onclick="exa.exAlert('HEY THERE')" value="Show EXAlert" />
-</div>
-</body>
+<html ng-app="moduleApp">
+    <head>
+        <script src="scripts/system.js"></script>
+        <script>
+            System.defaultJSExtensions = true;
+            System.baseURL = 'scripts/modules';
+            System.paths['jquery'] = '//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js';
+            System.paths['angular'] = 'https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js';
+            System.import('jquery');
+            System.import('angular');
+            System.import('angularBlue');
+            System.import('angularClick');
+            System.import('angularComponents');
+            System.import('exalert').then(function(exa){
+                window.exa = exa;
+            });
+            System.import('exhtml').then(function(htm){
+                window.htm = htm;
+            });
+        </script>
+    </head>
+    <body>
+        <h1>SystemJS Module Page</h1>
+        <h2>Basic module examples</h2>
+        <div>
+            <input type="button" onclick="htm.setHtml('html_block', 'CHANGED!')" value="Change HTML!" />
+            <div id="html_block">
+                I am a block of HTML, click the button above to change me!
+            </div>
+        </div>
+        <div>
+            <input type="button" onclick="exa.exAlert('HEY THERE')" value="Show EXAlert" />
+        </div>
+        <h2>Angular module example</h2>
+        <div style="font-size:1.5em"make-blue>I should be blue</div>
+        <exaclick-button></exaclick-button>
+    </body>
 </html>
