--- a/src/www/system.html
+++ b/src/www/system.html
@@ -1,23 +1,7 @@
 <html ng-app="moduleApp">
     <head>
         <script src="scripts/system.js"></script>
-        <script>
-            System.defaultJSExtensions = true;
-            System.baseURL = 'scripts/modules';
-            System.paths['jquery'] = '//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js';
-            System.paths['angular'] = 'https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js';
-            System.import('jquery');
-            System.import('angular');
-            System.import('angularBlue');
-            System.import('angularClick');
-            System.import('angularComponents');
-            System.import('exalert').then(function(exa){
-                window.exa = exa;
-            });
-            System.import('exhtml').then(function(htm){
-                window.htm = htm;
-            });
-        </script>
+        <script src="systemloader.js"></script>
     </head>
     <body>
         <h1>SystemJS Module Page</h1>
