--- a/src/www/system.html
+++ b/src/www/system.html
@@ -1,6 +1,6 @@
-<html ng-app="moduleApp">
+<html>
     <head>
-        <script src="scripts/system.js"></script>
+        <script src="scripts/libs/system.js"></script>
         <script src="systemloader.js"></script>
     </head>
     <body>
