got angular to load via require

--- a/src/www/require.html
+++ b/src/www/require.html
@@ -1,4 +1,4 @@
-<html ng-app="moduleApp">
+<html>
     <head>
         <script data-main="requireloader.js" src="scripts/libs/require.js"></script>
     </head>
