adding box to indicate that jquery has been loaded correctly on the global scope

--- a/src/www/require.html
+++ b/src/www/require.html
@@ -17,5 +17,8 @@
         <h2>Angular module example</h2>
         <div style="font-size:1.5em"make-blue>I should be blue</div>
         <exaclick-button></exaclick-button>
+        <h2>JQuery Loaded?</h2>
+        <p>Once jquery has been loaded on to the global scope, the loader should indicate it has been loaded below</p>
+        <div id="jqtest" style="width:100%;height:30px;border:1px solid #000"></div>
     </body>
 </html>
