changing angular to bootstrap in a 'then' function after the component module is loaded

--- a/src/www/system.html
+++ b/src/www/system.html
@@ -16,6 +16,7 @@
             <input type="button" onclick="exa.exAlert('HEY THERE')" value="Show EXAlert" />
         </div>
         <h2>Angular module example</h2>
+        <p>Angular should load and then bootstrap by the module loader, if it does there should be a blue line of text and a button that does something when clicked</p>
         <div style="font-size:1.5em"make-blue>I should be blue</div>
         <exaclick-button></exaclick-button>
 
