clearing up what is going on with tbe basic modules

--- a/src/www/require.html
+++ b/src/www/require.html
@@ -5,6 +5,7 @@
     <body>
         <h1>RequireJS Module Page</h1>
         <h2>Basic module examples</h2>
+        <p>Example AMD modules are loaded by the module loader and then manually bound to the global context in the loader.js file</p>
         <div>
             <input type="button" onclick="htm.setHtml('html_block', 'CHANGED!')" value="Change HTML!" />
             <div id="html_block">
