--- a/src/www/system.html
+++ b/src/www/system.html
@@ -6,6 +6,7 @@
     <body>
         <h1>SystemJS Module Page</h1>
         <h2>Basic module examples</h2>
+        <p>Example AMD modules are loaded by the module loader and then manually bound to the global context in the loader.js file</p>
         <div>
             <input type="button" onclick="htm.setHtml('html_block', 'CHANGED!')" value="Change HTML!" />
             <div id="html_block">
