reworking file paths to allow for grunt/concat build and show importing modules from one file

--- a/src/www/require.html
+++ b/src/www/require.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script data-main="requireloader.js" src="scripts/libs/require.js"></script>
+        <script data-main="scripts/loaders/requireloader.js" src="scripts/libs/require.js"></script>
     </head>
     <body>
         <h1>RequireJS Module Page</h1>
