--- a/src/www/system.html
+++ b/src/www/system.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <script src="scripts/libs/system.js"></script>
-        <script src="systemloader.js"></script>
+        <script src="scripts/loaders/systemloader.js"></script>
     </head>
     <body>
         <h1>SystemJS Module Page</h1>
